Fix on box sizing for callouts to prevent them from overlapping its container on mobile sizes

--- a/styles/components/blocks/note.scss
+++ b/styles/components/blocks/note.scss
@@ -2,6 +2,7 @@
     padding: 2em;
     border-radius: $rounded-small;
     margin: 2em 0 3em 0;
+    box-sizing: border-box;
 
     a,p,li,h1,h2,h3,h4,h5,h6 {
         color: unset !important;
